# EasyPR

./: .gitignore  .gitignore.orig  CMakeLists.txt  ChangeLog.md  Demo.vcxproj  Demo.vcxproj.filters  Dockerfile  EasyPR.sln  EasyPR.v12.vcxproj  EasyPR.vcxproj  EasyPR.vcxproj.filters  README.md  Result.xml  TestLocation.xml  Usage.md  accuracy.txt  build.sh  configure.py  makefile.txt  opencv.props  opencv248.props  run_accuracy.txt  光耦基础知识.doc  关于版权.txt
.github/: ISSUE_TEMPLATE.md
doc/: ChangeLog.md  EasyPR介绍.txt  EasyPR开发详解.doc  从机器学习谈起.doc
easyPR-doc/: algorithm.md  classDemo.md  easyPR.md
easyPR-doc/core/: chars_identify.md  feature.md  plate.md  plate_detect.md  plate_judge.md  plate_locate.md
easyPR-doc/util/: Kv.md  Utils.md  program_options.md
etc/: batch_test_menu  chinese_mapping  dev_team  main_menu  province_mapping  test_menu  thanks  train_menu
image/: GDSL.txt  使用说明.txt  免责声明.txt  图片捐赠.txt  版权声明.txt
include/: easypr.h
include/easypr/: api.hpp  chars_identify.h  chars_recognise.h  chars_segment.h  config.h  core_func.h  feature.h  plate.h  plate_detect.h  plate_judge.h  plate_locate.h  plate_recognize.h  program_options.h  svm_train.h  util.h
include/easypr/core/: character.hpp  chars_identify.h  chars_recognise.h  chars_segment.h  core_func.h  feature.h  params.h  plate.h  plate.hpp  plate_detect.h  plate_judge.h  plate_locate.h  plate_recognize.h  plate_recognize.h.orig
include/easypr/preprocess/: deface.h  gdts.h  mc_data.h
include/easypr/train/: annCh_train.h  ann_train.h  create_data.h  svm_train.h  train.h
include/easypr/util/: kv.h  program_options.h  switch.hpp  util.h
include/opencv2/: cvconfig.h  opencv_modules.hpp
include/text/: erfilter.hpp
model/: ann - bak.xml  ann_chinese.xml  svm_hist.xml
resources/doc/: ChangeLog.md  关于版权.txt
resources/image/extreme_test/不确定/: GroundTruth.xml
resources/image/general_test/: GroundTruth.xml  GroundTruth_others.xml
resources/image/native_test/: GroundTruth.xml  GroundTruth_others.xml  GroundTruth_windows.xml
resources/lib/: opencv_world300d.lib
resources/model/: ann.xml  annCh.xml  ann_bak.xml  svm_bak.xml
resources/model/text/: trained_classifierNM1.xml  trained_classifierNM2.xml  trained_classifier_erGrouping.xml
resources/result/: Result.xml  accuracy.txt  plateGroundTruth.txt
resources/text/: batch_test_menu  chinese_mapping  main_menu  thanks
resources/train/: annCh.7z  svm准确率提高历史.txt
resources/train/data/chars_recognise_ann/: chars2.7z  charsChinese.7z
result/: GroundTruth.xml  Result.xml  accuracy.txt  gridSearch.txt  plateGroundTruth.txt
src/: main.cpp
src/core/: better_mser.cpp  chars_identify.cpp  chars_recognise.cpp  chars_segment.cpp  core_func.cpp  core_util.cpp  feature.cpp  features.cpp  params.cpp  plate.cpp  plate_detect.cpp  plate_judge.cpp  plate_locate.cpp  plate_recognize.cpp  tin12i3x.v2x
src/cpp/: chars_identify.cpp  chars_recognise.cpp  chars_segment.cpp  plate_detect.cpp  plate_judge.cpp  plate_locate.cpp  plate_recognize.cpp  test.cpp
src/include/: CParser.h  chars_identify.h  chars_recognise.h  chars_segment.h  core_func.h  core_util.h  feature.h  features.h  plate.h  plate_detect.h  plate_judge.h  plate_locate.h  plate_recognize.h  prep.h  util.h
src/main/: main.cpp  test.cpp
src/main/core/: chars_identify.cpp  plate_judge.cpp  plate_locate.cpp
src/main/easypr/: data_prepare.cpp  data_proc.cpp  easypr_main.cpp  easypr_test.cpp
src/main/include/: chars_recognise.h  chars_segment.h  plate_detect.h  plate_judge.h  plate_recognize.h  prep.h
src/main/train/: ann_train.cpp  svm_train.cpp
src/main/util/: util.cpp
src/preprocess/: deface.cpp  gdts.cpp  general_test_prepare.cpp  mc_data.cpp
src/test/: accuracy_test.cpp  test.cpp
src/test/core/: test_plate_recognize.cpp
src/text/: erfilter.cpp
src/third/: erfilter.cpp  helper.cpp  lbp.cpp
src/train/: annCh_train.cpp  ann_train.cpp  create_data.cpp  svm_train.cpp  train.cpp
src/util/: CParser.cpp  deface.cpp  general_test_prepare.cpp  generate_gdts.cpp  kv.cpp  learn_prepare.cpp  mc_data_prepare.cpp  program_options.cpp  util.cpp
test/: accuracy.hpp  chars.hpp  config.hpp  main.cpp  plate.hpp  result.hpp
test/xml/: xmlParser.cpp
train/: ann_train.cpp  svm.xml  svm_0.8.xml  svm_train.cpp  svm准确率提高历史.txt  svm测试记录.txt  训练说明.txt
train/data/chars_recognise_ann/: chars2.7z  charsChinese.7z  charsChinese.rar
train/data/plate_detect_svm/: HasPlate.rar  NoPlate.rar
train/model/bak/: svm_2014-09-17.xml
vcprojs/: demo.vcxproj  demo.vcxproj.filters  demo.vcxproj.filters.orig  demo.vcxproj.template  libeasypr.vcxproj  libeasypr.vcxproj.filters  libeasypr.vcxproj.template  version.h
